--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "dotenv": "^16.4.5",
+    "redis": "^4.7.0",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
     "express": "^4.19.2",
+    "prisma": "^5.19.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
