--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@types/node": "^22.5.0",
+    "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
     "redis": "^4.7.0",
     "telegraf": "^4.16.3",
-    "@types/node": "^22.5.0"
+    "express": "^4.19.2",
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "express": "^4.19.2",
     "prisma": "^5.19.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "ts-node": "^10.9.2"
   }
 }
